--- a/src/main/resources/local-env-prop/configuration.properties
+++ b/src/main/resources/local-env-prop/configuration.properties
@@ -61,4 +61,4 @@
 #eirs.filecopy.url=http://159.89.225.5:9509/eirs/fileCopyApi
 #
 #
-#
+##spring.config.import=${GUI_CONFIG_PATH}/messages.properties
